kustomize/nginx/base/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-kustomize-service
spec:
  selector:
    app: nginx-yaml
  ports:
    - port: 80
